# OOP-LR_5

./: README.md
LR_5/: CMakeLists.txt  main.cpp
LR_5/include/: fixed_block_memory_resource.h  forward_list.h  memory_resource.h  singly_linked_list.h
LR_5/src/: fixed_block_memory_resource.cpp  memory_resource.cpp
LR_5/test/: tests.cpp
